--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1> Just for test!</h1>
+    <ul>
+        <li>task-one</li>
+        <li>task-two</li>
+        <li>task-three</li>
+    </ul>
 </body>
 </html>
