Add task-four to task list in index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>task-one</li>
         <li>task-two</li>
         <li>task-three</li>
+        <li>task-four</li>
     </ul>
 </body>
 </html>
